--- a/Lumatone.xcodeproj/xcshareddata/xcschemes/Lumatone.xcscheme
+++ b/Lumatone.xcodeproj/xcshareddata/xcschemes/Lumatone.xcscheme
@@ -80,6 +80,11 @@
             value = "YES"
             isEnabled = "YES">
          </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "IDELogRedirectionPolicy"
+            value = "oslogToStdio"
+            isEnabled = "NO">
+         </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
